force-app/main/default/objects/Edificio__c/Edificio__c.object-meta.xml
<CustomObject>
    <description>Relação dos nomes, quantidade de aptos, alugados e vagos.</description>
    <label>Edificio</label>
    <nameField>
        <label>Edificio Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Edificios</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>