force-app/main/default/objects/Edificio__c/fields/Alugados__c.field-meta.xml
<CustomField>
    <fullName>Alugados__c</fullName>
    <label>Alugados</label>
    <summaryFilterItems>
        <field>Unidade__c.Alugado__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Unidade__c.Edificio__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>