force-app/main/default/objects/Edificio__c/fields/Arrecada_o_Mensal__c.field-meta.xml
<CustomField>
    <fullName>Arrecada_o_Mensal__c</fullName>
    <label>Arrecadação Mensal</label>
    <summarizedField>Unidade__c.Valor_Aluguel__c</summarizedField>
    <summaryFilterItems>
        <field>Unidade__c.Alugado__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Unidade__c.Edificio__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>