force-app/main/default/objects/Edificio__c/fields/Disponivel__c.field-meta.xml
<CustomField>
    <fullName>Disponivel__c</fullName>
    <formula>Qt_Aptos__c  -  Alugados__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Disponivel</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>