force-app/main/default/objects/Edificio__c/fields/Qt_Aptos__c.field-meta.xml
<CustomField>
    <fullName>Qt_Aptos__c</fullName>
    <label>Qt. Aptos</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>