force-app/main/default/objects/Edificio__c/listViews/Lista_Copa.listView-meta.xml
<ListView>
    <fullName>Lista_Copa</fullName>
    <columns>NAME</columns>
    <columns>Alugados__c</columns>
    <columns>Disponivel__c</columns>
    <columns>Arrecada_o_Mensal__c</columns>
    <filterScope>Mine</filterScope>
    <label>Lista Copa</label>
</ListView>